--- a/content/machines/analog-rytm-mkii/manual.mdx
+++ b/content/machines/analog-rytm-mkii/manual.mdx
@@ -263,8 +263,6 @@ Whether the musical world you choose to inhabit is an ordered, harmonious and in
 
 The Elektron Team
 
-Analog Rytm MKII User Manual. This manual is copyright © 2021 Elektron Music Machines MAV AB. All reproduction, digital or printed, without written authorization is strictly prohibited. The information in this manual may change without notice. Elektron's product names, logotypes, titles, words or phrases may be registered and protected by Swedish and international law. All other brand or product names are trademarks or registered trademarks of their respective holders. This manual for Analog Rytm MKII OS version 1.61B was last updated June 3, 2020.
-
 # <span id="page-9-0"></span>3. Panel Layout and Connectors
 
 ## 3.1 Front Panel
@@ -4095,42 +4093,8 @@ Step recording mode
 
 ![](/machines/analog-rytm-mkii/images/_page_105_Picture_0.jpeg)
 
-# Fcc Compliance Statement
 
-This device complies with part 15 of the FCC rules. Operation is subject to the following two conditions: (1) This device may not cause harmful interference, and (2) this device must accept any interference received, including interference that may cause undesired operation.
-
-NOTE: This equipment has been tested and found to comply with the limits for a Class B digital device, pursuant to Part 15 of the FCC Rules. These limits are designed to provide reasonable protection against harmful interference in a residential installation. This equipment generates, uses and can radiate radio frequency energy and, if not installed and used in accordance with the instructions, may cause harmful interference to radio communications. However, there is no guarantee that interference will not occur in a particular installation. If this equipment does cause harmful interference to radio or television reception, which can be determined by turning the equipment off and on, the user is encouraged to try to correct the interference by one or more of the following measures:
-
-- Reorient or relocate the receiving antenna.
-- Increase the separation between the equipment and receiver.
-- Connect the equipment into an outlet on a circuit different from that to which the receiver is connected.
-- Consult the dealer or an experienced radio/TV technician for help.
-
-![](/machines/analog-rytm-mkii/images/_page_1_Figure_7.jpeg)
-
-WARNING: Cancer and Reproductive Harm – www.P65Warnings.ca.gov
-
-AVERTISSEMENT: Cancer et effet nocif sur la reproduction – www.P65Warnings.ca.gov
-
-ADVERTENCIA: Cáncer y Daño Reproductivo – www.P65Warnings.ca.gov
-
-# Canada
-
-This This Class B digital apparatus complies with Canadian ICES-003. Cet appareil numérique de la classe B est conforme à la norme NMB-003
-
-## European Union Regulation Compliance Statement
-
-This product has been tested to comply with the Low Voltage Directive 2014/35/EU and the Electromagnetic Compatibility Directive 2014/30/EU. The product meets the requirements of RoHS 2 Directive 2011/65/EU.
-
-<Warning>
-This symbol indicates that your product must be disposed of properly according to local laws and regulations.
-</Warning>
-
-## Legal Disclaimer
-
-The information in this document is subject to change without notice and should not be construed as a commitment by Elektron. Elektron assumes no responsibility for any errors that may appear in this document. Elektron may also make improvements and/or changes in the products and programs described in this document at any time without notice. In no event shall Elektron be liable for any special, indirect, or consequential damages or any damages whatsoever resulting from loss of use, data, or profits, whether in an action of contract, negligence, or other action, arising out of or in connection with the use or performance of this information.
-
-# <span id="page-2-0"></span>Important Safety and Maintenance Instructions
+# <span id="page-2-0"></span> Important Safety and Maintenance Instructions
 
 Please read these instructions carefully and adhere to the operating advice.
 
@@ -4148,7 +4112,7 @@ Please read these instructions carefully and adhere to the operating advice.
 12. Unplug this unit during lightning storms or when it is not used for long periods of time.
 13. Refer all servicing to qualified service technicians. Servicing is required when the unit has been damaged in any way, liquid has been spilled or objects have fallen into the unit, the unit has been exposed to rain or moisture, does not operate normally, or has been dropped.
 
-## Warning
+### Warning
 
 To reduce the risk of fire, electrical shock or product damage:
 
@@ -4157,12 +4121,12 @@ To reduce the risk of fire, electrical shock or product damage:
 - Do not open the casing. There are no user repairable or adjustable parts inside. Leave service and repairs to trained service technicians only.
 Do not exceed the limitations specified in the Electrical specifications.
 
-## Sound Peaks
+### Sound Peaks
 
 - A brief 3 kHz signal will be sent to all outs of the Analog Rytm MKII when the Test mode on the Early Startup menu is activated. Remember to turn down the volume on all speakers and headphones before activating Test mode.
 During calibration there will be loud and unpleasant sounds on the individual outs. Disconnect these during calibration.
 
-## Safety Instructions for the Power Adapter
+### Safety Instructions for the Power Adapter
 
 - The adapter is not safety grounded and may only be used indoors.
 - To ensure good ventilation for the adapter, do not place it in tight spaces. To prevent risk of electric shock and fire because of overheating, ensure that curtains and other objects do not prevent adapter ventilation.
@@ -4170,4 +4134,25 @@ During calibration there will be loud and unpleasant sounds on the individual ou
 - Connect the adapter to an easily accessible electrical outlet close to the unit.
 - The adapter is in standby mode when the power cord is connected. The primary circuit is always active when the cord is connected to the power outlet. Pull out the cord to completely disconnect the adapter.
 - In the EU, only use CE approved power cords.
+
+<Footnotes>
+<Footnote title="Copyright">
+Analog Rytm MKII User Manual. This manual is copyright © 2021 Elektron Music Machines MAV AB. All reproduction, digital or printed, without written authorization is strictly prohibited. The information in this manual may change without notice. Elektron's product names, logotypes, titles, words or phrases may be registered and protected by Swedish and international law. All other brand or product names are trademarks or registered trademarks of their respective holders. This manual for Analog Rytm MKII OS version 1.61B was last updated June 3, 2020.
+</Footnote>
+<Footnote title="FCC Compliance Statement">
+This device complies with part 15 of the FCC rules. Operation is subject to the following two conditions: (1) This device may not cause harmful interference, and (2) this device must accept any interference received, including interference that may cause undesired operation. This equipment has been tested and found to comply with the limits for a Class B digital device, pursuant to Part 15 of the FCC Rules.
+</Footnote>
+<Footnote title="California Proposition 65">
+WARNING: Cancer and Reproductive Harm – www.P65Warnings.ca.gov
+</Footnote>
+<Footnote title="Canada">
+This Class B digital apparatus complies with Canadian ICES-003. Cet appareil numérique de la classe B est conforme à la norme NMB-003.
+</Footnote>
+<Footnote title="European Union Compliance">
+This product has been tested to comply with the Low Voltage Directive 2014/35/EU and the Electromagnetic Compatibility Directive 2014/30/EU. The product meets the requirements of RoHS 2 Directive 2011/65/EU. This symbol indicates that your product must be disposed of properly according to local laws and regulations.
+</Footnote>
+<Footnote title="Legal Disclaimer">
+The information in this document is subject to change without notice and should not be construed as a commitment by Elektron. Elektron assumes no responsibility for any errors that may appear in this document. Elektron may also make improvements and/or changes in the products and programs described in this document at any time without notice. In no event shall Elektron be liable for any special, indirect, or consequential damages or any damages whatsoever resulting from loss of use, data, or profits, whether in an action of contract, negligence, or other action, arising out of or in connection with the use or performance of this information.
+</Footnote>
+</Footnotes>
 
