--- a/content/machines/analog-rytm-mkii/manual.mdx
+++ b/content/machines/analog-rytm-mkii/manual.mdx
@@ -734,7 +734,7 @@ By carefully assigning a set of parameter values, you can prepare a scene that m
 
 Press the <Key>PERF</Key> key to enter <Param>PERFORMANCE</Param> mode. This mode enables the <Key>PADS</Key> to control several <Param>PARAMETER</Param> page parameters at once. Change many dimensions of one or more drum track Sounds at the touch of a single pad. A pad in this mode, prepared with one or many additive layers of parameter modulation, is called a performance macro. While setting up a performance macro is done in a similar way as setting up a scene, there is a major difference in the way these two modes operate. A scene is a static, ON/OFF command of an array of parameters set to specific values. A performance macro engages the assigned parameters dynamically. When using a performance macro, the parameters are modulated relative to the pressure applied to the pad. Green color <LED>PADS</LED> contains a performance macro.
 
-<Param>PERFORMANCE</Param> mode settings are stored as part of a kit. For more information, please see ["PER-](#10-4-per)
+<Param>PERFORMANCE</Param> mode settings are stored as part of a kit. For more information, please see ["PERFORMANCE MODE" on page 29](#10-4-performance-mode)
 
 # <span id="page-23-1"></span><span id="page-23-0"></span>9. Projects
 
