--- a/content/machines/analog-four-mkii/manual.mdx
+++ b/content/machines/analog-four-mkii/manual.mdx
@@ -391,7 +391,7 @@ Make sure you place the Analog Four MKII on a stable support, such as a sturdy t
 
 # <span id="page-14-0"></span>4. Analog Four MKII Signal Path
 
-![](/machines/analog-four-mkii/images/_page_14_Figure_2.jpeg)
+<SignalPathDiagram />
 
 ## 4.1 About the Components
 
@@ -2619,7 +2619,7 @@ The CV/Gate track of the Analog Four MKII is made for controlling external, CV/G
 
 ![](/machines/analog-four-mkii/images/_page_75_Picture_1.jpeg)
 
-<span id="page-75-0"></span>8. The Analog Four MKII is now ready to control the external synthesizer. On the CV A, CV B and CV C pages, you can see the controllable parameters. These parameters can, of course, be parameter locked.
+8. <span id="page-75-0"></span>The Analog Four MKII is now ready to control the external synthesizer. On the CV A, CV B and CV C pages, you can see the controllable parameters. These parameters can, of course, be parameter locked.
 
 ![](/machines/analog-four-mkii/images/_page_75_Picture_3.jpeg)
 
