refactor: Enhance CustomImg and TableOfContents components for improved performance and usability
- Introduced SVG caching in CustomImg to prevent redundant fetches and improve loading times.
- Updated SVG transformation logic to utilize memoization for better performance.
- Enhanced TableOfContents with debounced search functionality for smoother user experience.
- Memoized various computations in both components to reduce unnecessary re-renders and improve efficiency.

--- a/content/machines/analog-rytm-mkii/manual.mdx
+++ b/content/machines/analog-rytm-mkii/manual.mdx
@@ -756,7 +756,7 @@ Projects are managed in the <Param>PROJECT</Param> menu, located in the <Param>G
 
 Scroll through the list by using <Key>UP</Key>/<Key>DOWN</Key> or the <Knob>TRACK LEVEL</Knob> knob and select PROJECT. Open the menu by pressing <Key>YES</Key>.
 
-![](/machines/analog-rytm-mkii/images/_page_23_Picture_11.jpeg)
+![](/oled/analog-rytm-mkii/screens/_page_23_Picture_11.svg)
 
 LOAD PROJECT opens a project selection screen where you choose a project to be loaded. Note that the active project will not be saved before loading the new project. This menu can be accessed directly by pressing and holding <Key>GLOBAL SETTINGS</Key> for a little while. If you wish to create a new project, select CREATE NEW at the very bottom of the list. The new project will be a blank slate.
 
