refactor: Improve global CSS styling and spacing for prose elements
- Added Tailwind directives processing comment for clarity.
- Normalized spacing for various prose elements to ensure consistent margins.
- Updated heading margins and added styles for consistent spacing after headings.
- Enhanced table styling with improved margin settings for better layout.

--- a/content/machines/analog-rytm-mkii/manual.mdx
+++ b/content/machines/analog-rytm-mkii/manual.mdx
@@ -176,7 +176,7 @@ date: "2025-12-20"
 | [14.7.3 SEQUENCER CONFIG](#14-7-3-sequencer-config) | 65 |
 | [14.8 SYSTEM](#14-8-system) | 65 |
 | [14.8.1 USB CONFIG](#14-8-1-USB-config) | 65 |
-| [14.8.2 OS UPGRADE](#14-8-2-os-upgrade) | 66 |
+| [14.8.2 OS UPGRADE](#14-8-2-OS-upgrade) | 66 |
 | [14.8.3 FORMAT + DRIVE](#14-8-3-format-drive) | 66 |
 | [14.8.4 STORAGE](#14-8-4-storage) | 66 |
 | [14.8.5 CALIBRATION](#14-8-5-calibration) | 66 |
@@ -184,7 +184,7 @@ date: "2025-12-20"
 | [15.1 TEST MODE](#15-1-test-mode) | 67 |
 | [15.2 EMPTY RESET](#15-2-empty-reset) | 67 |
 | [15.3 FACTORY RESET](#15-3-factory-reset) | 67 |
-| [15.4 OS UPGRADE](#15-4-os-upgrade) | 67 |
+| [15.4 OS UPGRADE](#15-4-OS-upgrade) | 67 |
 | [15.5 EXIT](#15-5-exit) | 67 |
 | [16. SETUP EXAMPLES](#16-setup-examples) | 68 |
 | [16.1 ANALOG RYTM MKII WITH A MONOPHONIC BASS MACHINE](#16-1-analog-rytm-mkii-with-a-monophonic-bass-machine) | 68 |
@@ -282,8 +282,8 @@ The Elektron Team
 12. <Key>TRIG</Key> key controls the TRIG settings for the active track. The secondary function opens the <Param>TRIGS SETUP</Param> menu.
 13. <Knob>DATA ENTRY</Knob> knobs <Knob>A-H</Knob>. Used for setting parameter values. Press knob when turning to change values in larger increments.
 14. <Key>PARAMETER</Key> keys access the <Param>PARAMETER</Param> pages of the active track. The <Key>PARAMETER</Key> keys indicate if the page is active (red) or inactive (off). The five parameter page keys are, from left to right:
-    - <Key>SRC</Key> key accesses the <Param>SYNTH</Param> parameters of the track Sound. These control the drum synthesis. When the <Param>FX</Param> track is active, the <Param>DELAY</Param> parameter page is accessed. The secondary function opens the MACHINE selection menu.
-    - <Key>SMPL</Key> key takes you to the <Param>SAMPLE</Param> pages. Various aspects of the sample playback are set on these pages. When the <Param>FX</Param> track is active, the <Param>REVERB</Param> parameter page is accessed. The secondary function opens the SAMPLE selection menu.
+    - <Key>SRC</Key> key accesses the <Param>SYNTH</Param> parameters of the track Sound. These control the drum synthesis. When the <Param>FX</Param> track is active, the <Param>DELAY</Param> parameter page is accessed. The secondary function opens the <Param>MACHINE</Param> selection menu.
+    - <Key>SMPL</Key> key takes you to the <Param>SAMPLE</Param> pages. Various aspects of the sample playback are set on these pages. When the <Param>FX</Param> track is active, the <Param>REVERB</Param> parameter page is accessed. The secondary function opens the <Param>SAMPLE</Param> selection menu.
     - <Key>FLTR</Key> key accesses the <Param>FILTER</Param> page. The analog multimode filter parameters are set here. When the <Param>FX</Param> track is active, the <Param>DISTORTION</Param> parameter page is accessed. The secondary function opens the <Param>SOUND SETTINGS</Param> menu.
     - <Key>AMP</Key> key takes you to the <Param>AMP</Param> page, where the shape of the amplitude envelope is set. When the <Param>FX</Param> track is active, the <Param>COMPRESSOR</Param> parameter page is accessed.
     - <Key>LFO</Key> key accesses the <Param>LFO</Param> parameters for the active track.
@@ -1173,9 +1173,9 @@ There are five <Param>PARAMETER</Param> pages for the <Param>FX</Param> track. A
 
 <Param>REVERB</Param> controls the character and volume of the reverb send effect.
 
-DIST controls the amount and character of distortion applied.
+<Param>DIST</Param> controls the amount and character of distortion applied.
 
-COMP controls the behavior, volume and dry/wet mix of sound compression.
+<Param>COMP</Param> controls the behavior, volume and dry/wet mix of sound compression.
 
 <Param>LFO</Param> controls parameters for the <Param>FX</Param> track LFO.
 
@@ -2266,7 +2266,7 @@ USB MIDI select this option If you wish to send and receive MIDI over USB.
 
 <span id="page-65-0"></span>USB AUDIO/MIDI sets the Analog Rytm MKII to send and receive audio and MIDI over USB. Select this option if you want to use the Analog Rytm MKII together with a class compliant USB audio host. For more information, please ["CLASS COMPLIANT DEVICE" on page 18](#6-7-class-compliant-device) and ["AUDIO ROUTING" on](#14-6-audio-routing)
 
-## 14.8.2 Os Upgrade
+## 14.8.2 OS Upgrade
 
 Use this menu option is used when you want to upgrade the Analog Rytm MKII OS. To send the OS syx file, use our free Elektron Transfer software. The OS syx file and Elektron Transfer can be downloaded from the Elektron website.
 
@@ -2330,7 +2330,7 @@ When performing a factory reset on the Analog Rytm MKII, it will overwrite and r
 
 If you wish to keep the active project, remember to save it to a +Drive project slot higher than 1 before you perform a factory reset. To perform a factory reset, press the <Key>TRIG 3</Key> key.
 
-## 15.4 Os Upgrade
+## 15.4 OS Upgrade
 
 Initiate the OS upgrade by pressing the <Key>TRIG 5</Key> key. Use this menu option if you for some reason cant upgrade the Analog Rytm MKII OS using the standard procedure in the <Param>SYSTEM</Param> menu. To send the OS file, use our free Elektron Transfer software. The Elektron Transfer can be downloaded from the Elektron website.
 
