--- a/content/machines/analog-four-mkii/manual.mdx
+++ b/content/machines/analog-four-mkii/manual.mdx
@@ -218,7 +218,7 @@ date: "2025-12-21"
 | [12.7.3 SEQUENCER CONFIG](#12-7-3-sequencer-config) | 66 |
 | [12.8 SYSTEM](#12-8-system) | 66 |
 | [12.8.1 USB CONFIG](#12-8-1-USB-config) | 66 |
-| [12.8.2 OS UPGRADE](#12-8-2-os-upgrade) | 66 |
+| [12.8.2 OS UPGRADE](#12-8-2-OS-upgrade) | 66 |
 | [12.8.3 FORMAT +DRIVE](#12-8-3-format-drive) | 66 |
 | [12.8.4 CALIBRATION](#12-8-4-calibration) | 66 |
 | [12.8.5 MASTER TUNE](#12-8-5-master-tune) | 67 |
@@ -226,7 +226,7 @@ date: "2025-12-21"
 | [13.1 TEST MODE](#13-1-test-mode) | 70 |
 | [13.2 EMPTY RESET](#13-2-empty-reset) | 70 |
 | [13.3 FACTORY RESET](#13-3-factory-reset) | 70 |
-| [13.4 OS UPGRADE](#13-4-os-upgrade) | 70 |
+| [13.4 OS UPGRADE](#13-4-OS-upgrade) | 70 |
 | [14. MORE ON OSCILLATORS, FILTERS, AND ENVELOPES](#14-more-on-oscillators-filters-and-envelopes) | 71 |
 | [14.1 OSCILLATORS](#14-1-oscillators) | 71 |
 | [14.1.1 SUB OSCILLATORS](#14-1-1-sub-oscillators) | 71 |
@@ -2420,7 +2420,7 @@ USB MIDI select this option If you wish to send and receive MIDI over USB.
 
 USB AUDIO/MIDI sets the Analog Four MKII to send and receive audio and MIDI over USB. Select this option if you want to use the Analog Four MKII together with a class compliant USB audio host. [more information, please see "AUDIO ROUTING" on page 65.](#12-6-audio-routing)
 
-## 12.8.2 Os Upgrade
+## 12.8.2 OS Upgrade
 
 This menu option is used when you want to upgrade the Analog Four MKII OS. To send the OS syx file, use our free Elektron Transfer software. The OS syx file and Elektron Transfer can be downloaded from the Elektron website.
 
@@ -2474,7 +2474,7 @@ When performing a factory reset on the Analog Four MKII it will overwrite and re
 
 If you wish to keep the active project, remember to save it to a +Drive project slot higher than 1 before you perform a factory reset. To perform a factory reset, press <Key>TRIG</Key> key 3.
 
-# 13.4 Os Upgrade
+# 13.4 OS Upgrade
 
 Choose this option by pressing the fourth <Key>TRIG</Key> key. Use this menu option if you for some reason cant upgrade the Analog Four MKII OS using the standard procedure in the <Param>SYSTEM</Param> menu. To send the OS file, use our free Elektron Transfer software. The Elektron Transfer can be downloaded from the Elektron website.
 
